<resources>
    <string name="app_name">Translator</string>
    <string name="kirlat_fragment">Кириллица-Latynsha</string>
    <string name="favourite_fragment">Unaǵandar tіzіmі</string>
    <string name="profile_fragment">Jeke paraq</string>
    <string name="search_fragment">Qyzyqty kontent</string>
    <string name="translate_fragment">Audary</string>
    <string name="send_message_to_author">Avtorǵa hat jazý</string>
    <string name="share_extra">Qosymshamen bólіsý</string>
    <string name="need_extra">Maǵan qosymsha kerek</string>
    <string name="charged_text">Сәлем, қалайсың?</string>
    <string name="need_input">Need word to translate</string>
    <string name="shared_preferences">Shared Preferences</string>
    <string name="selected_message">selected message</string>
    <string name="response_message">response message</string>
    <string name="request_message">request message</string>
    <string name="kirlat_messages">kirlat messages</string>
    <string name="favourite_messages">favourite messages</string>
    <string name="deleted_message">Oshirildi: %1$s | %2$s</string>
    <string name="undo">Keri qaitaru</string>
    <string name="theme_mode">Theme mode</string>
    <string name="boolean_theme">Boolean theme</string>
    <string name="popup_copy">Kóshіrý</string>
    <string name="popup_share">Bólіsý</string>
    <string name="popup_delete">Óshіrý</string>
    <string name="popup_add_favourites">Unaǵandar tіzіmіne qosý</string>
    <string name="ru_en">Рус-Eng</string>
    <string name="en_ru">Eng-Рус</string>
    <string name="saving_translated_messages">saving translated messages</string>
    <string name="layout">layout</string>
    <string name="exit">Шығу</string>
    <string name="saving_user">user</string>
    <string name="word_count">word count</string>
    <string name="word_count_label">Аударылған сөздер саны:</string>
</resources>
