<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:title=""
        android:icon="@drawable/three_dots"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/chSendMessageToAuthor"
                android:title="@string/send_message_to_author"
                android:orderInCategory="0"
                android:icon="@drawable/ic_message"
                app:showAsAction="never"/>
            <item android:id="@+id/chShareExtra"
                android:title="@string/share_extra"
                android:icon="@drawable/ic_share"
                app:showAsAction="never"/>
            <item android:id="@+id/chNeedExtra"
                android:title ="@string/need_extra"
                android:icon="@drawable/ic_paperplane"
                app:showAsAction="never"/>
        </menu>
    </item>
</menu>